# ahh

./: README.md  UAP.py  app.py  baruuap.py  pyproject.toml  requirements.txt
model/: tokenizer.joblib
models/: tokenizer.joblib
